# pylab

./: README.md
courses/deeplearningai/serverless-llm-aws-bedrock/: pyproject.toml
courses/deeplearningai/serverless-llm-aws-bedrock/notebooks/: L3_enable_logging.ipynb  L4_lambda_function.ipynb  l1_bedrock_first_predicts.ipynb  l2_transcript_summary.ipynb
courses/deeplearningai/serverless-llm-aws-bedrock/prompts/: l2_template.txt
courses/deeplearningai/serverless-llm-aws-bedrock/src/: notebook.py  utils.py
courses/fundamentos-de-nlp-nltk/: .gitignore  README.md  pyproject.toml
courses/fundamentos-de-nlp-nltk/notebooks/: quickstart.ipynb  text_vocab_statistics.ipynb  tokenization.ipynb
courses/huggingface/llm/: pyproject.toml
courses/introduction-to-tensorflow-for-ai/: README.md  pyproject.toml
courses/introduction-to-tensorflow-for-ai/notebooks/: C1W1_Assignment.ipynb
courses/introduction-to-tensorflow-for-ai/src/: hello_world.py
courses/langchain/rag-from-scratch/: .env.sample  pyproject.toml
courses/langchain/rag-from-scratch/notebooks/: intro.ipynb
courses/langchain/rag-from-scratch/notebooks/output/: intro_ids.txt
projects/vpn/src/: forwarder.py
tutorials/firebase-basic-mcp/: .env.sample  pyproject.toml
tutorials/firebase-basic-mcp/src/: __init__.py  main.py  subgraph.py
tutorials/firebase-basic-mcp/tests/: test_subgraph.py
