[tool.poetry]
name = "intro-ai-tf-coursera"
version = "0.1.0"
description = "Dependencies for running the examples and homeworks for the course"
authors = ["Giancarlo P"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
keras = "^3.7.0"
tensorflow = "^2.18.0"


[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
