[project]
name = "rag-from-scratch"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain[google-genai] (>=0.3.27,<0.4.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "langchain-pinecone (>=0.2.12,<0.3.0)",
    "langchain-community (>=0.3.31,<0.4.0)",
    "pinecone[grpc] (==7.0.2)",
    "pypdf (>=6.1.1,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "transformers (==4.56.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
notebook = [
    "ipykernel (>=6.30.1,<7.0.0)"
]
